Fix font color on ios

--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@ body {
     height: 100px;
     background-color: transparent;
     font-size: 24px;
+    color: black;
 }
 
 @media only screen and (max-width: 576px) {
